# praeparium

./: .gitignore  SECURITY_AND_AUTOMATION_POLICY.md  _author_loader_smoketest.py  _render_smoketest.py  _yaml_check.py  cli.py  pyproject.toml  replacements.txt
data/bundles/: water.yaml
data/sourcepacks/: _TEMPLATE.json  bathtub_water_bladders.json  sanitize_containers.json  water_containers.json  water_ladder_hub.json
docs/: README.md
praeparium/: $PROFILE.txt  cli.py  post.py  writer.py  writer_prompt_v2.txt
praeparium/audit/: engine.py
praeparium/data/: author_registry.py  loader.py  loaders.py  models.py
praeparium/data/bundles/: bundle_slug water-prep.yaml  deployment.yaml  design.md  mini.yaml  objectives.yaml  requirements.yaml  water.yaml  water.yaml.txt
praeparium/data/registry/authors/: jdoe.yaml
praeparium/data/schemas/: core.py  sourcepack.py
praeparium/data/sourcepacks/: water_containers.json
praeparium/export/: wordpress.py
praeparium/praeparium/: pyproject.toml
praeparium/praeparium/sop3/: render.py
praeparium/praeparium/sop3/templates/: review.md.j2
praeparium/qa/: checks.py  claims.py  jargon.py  style.py
praeparium/qa/packs/: water_standards.py
praeparium/sop2/: planner.py  render.py
praeparium/sop3/: render.py
praeparium/sop3/templates/: _macros.md.j2  faq.md.j2.txt  guide.md.j2.txt  hub.md.j2  hub.md.j2.txt  review.md.j2.txt  roundup.md.j2
praeparium/templates/: _jsonld_article.html.j2  _macros.md.j2  guide.md.j2  hub.md.j2  review.md.j2  roundup.md.j2
scripts/: run-water.ps1  set-openAI.sample.ps1
