[build-system]
requires = ["setuptools>=70", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "praeparium"
version = "0.1.0"
description = "Praeparium content automation CLI"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "jinja2>=3.1",
  "pydantic>=2.7",
  "typer>=0.12",
  "pyyaml>=6.0",
]

[project.scripts]
praeparium = "praeparium.cli:app"

[tool.setuptools.packages.find]
where = ["."]
