[project]
name = "praeparium"
version = "0.1.0"
description = "CMS automation for bundles (Objectives?Deploy)"
requires-python = ">=3.11"
dependencies = [
  "pydantic>=2.8",
  "jinja2>=3.1",
  "typer>=0.12",
  "textstat>=0.7",
  "pyyaml>=6.0",
  "jsonschema>=4.22",
  "requests>=2.32"
]

[project.scripts]
praeparium = "praeparium.cli:app"
